Feature/metrics collect (#3)
* cur state

* upd workflow

* impl

* lint fix
