# skylr-shard/internal/api/grpc/v1/api.go
@@ -1,8 +1,11 @@
 package v1
 
 import (
+	"time"
+
 	"github.com/cutlery47/skylr/skylr-shard/internal/metrics"
 	pbshard "github.com/cutlery47/skylr/skylr-shard/internal/pb/skylr-shard"
+	"github.com/cutlery47/skylr/skylr-shard/internal/pkg/utils"
 	"github.com/cutlery47/skylr/skylr-shard/internal/shard"
 )
 
@@ -12,18 +15,22 @@ type Implementation struct {
 
 	shard     *shard.Shard
 	collector *metrics.Collector
+
+	metricsDelay utils.Provider[time.Duration]
 }
 
 // Config - API implementation config
 type Config struct {
-	Shard     *shard.Shard
-	Collector *metrics.Collector
+	Shard        *shard.Shard
+	Collector    *metrics.Collector
+	MetricsDelay utils.Provider[time.Duration]
 }
 
 // New creates new API implementation
 func New(cfg Config) *Implementation {
 	return &Implementation{
-		shard:     cfg.Shard,
-		collector: cfg.Collector,
+		shard:        cfg.Shard,
+		collector:    cfg.Collector,
+		metricsDelay: cfg.MetricsDelay,
 	}
 }
